remove dead compiled releases
Signed-off-by: dmitriy kalinin <dkalinin@pivotal.io>

--- a/ci/pipelines/compiled-releases/pipeline.yml
+++ b/ci/pipelines/compiled-releases/pipeline.yml
@@ -17,11 +17,6 @@ resources:
   #
   # releases to compile
   #
-  - name: bosh-release-255
-    type: bosh-io-release
-    source:
-      repository: cloudfoundry/bosh
-
   - name: bosh-release-257
     type: bosh-io-release
     source:
@@ -37,7 +32,7 @@ resources:
     source:
       repository: cloudfoundry/bosh
 
-  - name: uaa-release # really -13
+  - name: uaa-release-13
     type: bosh-io-release
     source:
       repository: cloudfoundry/uaa-release
@@ -47,20 +42,10 @@ resources:
     source:
       repository: cloudfoundry/uaa-release
 
-  - name: bosh-warden-cpi-release
+  - name: uaa-release-30
     type: bosh-io-release
     source:
-      repository: cppforlife/bosh-warden-cpi-release
-
-  - name: garden-linux-release
-    type: bosh-io-release
-    source:
-      repository: cloudfoundry/garden-linux-release
-
-  - name: garden-runc-release
-    type: bosh-io-release
-    source:
-      repository: cloudfoundry/garden-runc-release
+      repository: cloudfoundry/uaa-release
 
   #
   # stemcells to compile on
@@ -70,22 +55,6 @@ resources:
     source:
       bucket: bosh-aws-light-stemcells
       regexp: "light-bosh-stemcell-(?P<version>3363(\\.[^-]+)?)-aws-xen-hvm-ubuntu-trusty-go_agent.tgz"
-
-  - name: ubuntu-trusty-3263-stemcell
-    type: s3
-    source:
-      bucket: bosh-jenkins-artifacts
-      regexp: "bosh-stemcell/aws/light-bosh-stemcell-(?P<version>3263(\\.[^-]+)?)-aws-xen-hvm-ubuntu-trusty-go_agent.tgz"
-
-  - name: ubuntu-trusty-3312-stemcell
-    type: s3
-    source:
-      bucket: bosh-aws-light-stemcells
-      regexp: "light-bosh-stemcell-(?P<version>3312(\\.[^-]+)?)-aws-xen-hvm-ubuntu-trusty-go_agent.tgz"
-
-  #
-  # compiled releases
-  #
 
   # ubuntu-trusty-3363
 
@@ -105,102 +74,14 @@ resources:
       secret_access_key: {{aws_secret_access_key}}
       regexp: "uaa-[\\d\\.]+-ubuntu-trusty-3363.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
 
-  # - name: bosh-warden-cpi-release-ubuntu-trusty-3363
-  #   type: s3
-  #   source:
-  #     bucket: "bosh-compiled-release-tarballs"
-  #     access_key_id: {{aws_key_id}}
-  #     secret_access_key: {{aws_secret_access_key}}
-  #     regexp: "bosh-warden-cpi-[\\d\\.]+-ubuntu-trusty-3363.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
-
-  # - name: garden-linux-release-ubuntu-trusty-3363
-  #   type: s3
-  #   source:
-  #     bucket: "bosh-compiled-release-tarballs"
-  #     access_key_id: {{aws_key_id}}
-  #     secret_access_key: {{aws_secret_access_key}}
-  #     regexp: "garden-linux-[\\d\\.]+-ubuntu-trusty-3363.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
-
-  # - name: garden-runc-release-ubuntu-trusty-3363
-  #   type: s3
-  #   source:
-  #     bucket: "bosh-compiled-release-tarballs"
-  #     access_key_id: {{aws_key_id}}
-  #     secret_access_key: {{aws_secret_access_key}}
-  #     regexp: "garden-runc-[\\d\\.]+-ubuntu-trusty-3363.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
-
-  # ubuntu-trusty-3312
-
-  - name: bosh-on-ubuntu-trusty-3312
-    type: s3
-    source:
-      bucket: "bosh-compiled-release-tarballs"
-      access_key_id: {{aws_key_id}}
-      secret_access_key: {{aws_secret_access_key}}
-      regexp: "bosh-[\\d\\.]+-ubuntu-trusty-3312.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
-
-  - name: uaa-on-ubuntu-trusty-3312
-    type: s3
-    source:
-      bucket: "bosh-compiled-release-tarballs"
-      access_key_id: {{aws_key_id}}
-      secret_access_key: {{aws_secret_access_key}}
-      regexp: "uaa-[\\d\\.]+-ubuntu-trusty-3312.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
-
-  - name: bosh-warden-cpi-release-ubuntu-trusty-3312
-    type: s3
-    source:
-      bucket: "bosh-compiled-release-tarballs"
-      access_key_id: {{aws_key_id}}
-      secret_access_key: {{aws_secret_access_key}}
-      regexp: "bosh-warden-cpi-[\\d\\.]+-ubuntu-trusty-3312.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
-
-  - name: garden-linux-release-ubuntu-trusty-3312
-    type: s3
-    source:
-      bucket: "bosh-compiled-release-tarballs"
-      access_key_id: {{aws_key_id}}
-      secret_access_key: {{aws_secret_access_key}}
-      regexp: "garden-linux-[\\d\\.]+-ubuntu-trusty-3312.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
-
-  - name: garden-runc-release-ubuntu-trusty-3312
-    type: s3
-    source:
-      bucket: "bosh-compiled-release-tarballs"
-      access_key_id: {{aws_key_id}}
-      secret_access_key: {{aws_secret_access_key}}
-      regexp: "garden-runc-[\\d\\.]+-ubuntu-trusty-3312.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
-
-  # ubuntu-trusty-3263
-
-  - name: bosh-on-ubuntu-trusty-3263
-    type: s3
-    source:
-      bucket: "bosh-compiled-release-tarballs"
-      access_key_id: {{aws_key_id}}
-      secret_access_key: {{aws_secret_access_key}}
-      regexp: "bosh-[\\d\\.]+-ubuntu-trusty-stemcell-3263.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
-
-  - name: uaa-on-ubuntu-trusty-3263
-    type: s3
-    source:
-      bucket: "bosh-compiled-release-tarballs"
-      access_key_id: {{aws_key_id}}
-      secret_access_key: {{aws_secret_access_key}}
-      regexp: "uaa-[\\d\\.]+-ubuntu-trusty-stemcell-3263.*-(\\d+)-(\\d+)-(\\d+)-(\\d+).tgz"
-
 jobs:
-  # ubuntu-trusty-3363
-
-  - name: compile-bosh-release-latest-ubuntu-trusty-3363
+  - name: compile-bosh-release-261-ubuntu-trusty-3363
     plan:
       - aggregate:
           - get: bosh-src
           - get: bosh-deployment
           - get: bosh-release-261
-            trigger: true
           - get: ubuntu-trusty-3363-stemcell
-            trigger: true
       - task: deploy-director
         file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
         input_mapping:
@@ -225,16 +106,14 @@ jobs:
           task: teardown-director
           file: bosh-src/ci/pipelines/compiled-releases/tasks/teardown-director.yml
 
-  - name: compile-uaa-release-latest-ubuntu-trusty-3363
+  - name: compile-uaa-release-30-ubuntu-trusty-3363
     plan:
       - aggregate:
           - get: bosh-src
           - get: bosh-deployment
-          - get: uaa-release-20
-            trigger: true
+          - get: uaa-release-30
           - get: bosh-release-261
           - get: ubuntu-trusty-3363-stemcell
-            trigger: true
       - task: deploy-director
         file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
         input_mapping:
@@ -251,7 +130,7 @@ jobs:
           file: bosh-src/ci/pipelines/compiled-releases/tasks/export-release.yml
           input_mapping:
             stemcell: ubuntu-trusty-3363-stemcell
-            release: uaa-release-20
+            release: uaa-release-30
         - put: uaa-on-ubuntu-trusty-3363
           params:
             file: "compiled-release/*.tgz"
@@ -259,21 +138,17 @@ jobs:
           task: teardown-director
           file: bosh-src/ci/pipelines/compiled-releases/tasks/teardown-director.yml
 
-  # ubuntu-trusty-3312
-
-  - name: compile-bosh-release-latest-ubuntu-trusty-3312
+  - name: compile-bosh-release-260-latest-ubuntu-trusty-3363
     plan:
       - aggregate:
           - get: bosh-src
           - get: bosh-deployment
           - get: bosh-release-260
-            trigger: true
-          - get: ubuntu-trusty-3312-stemcell
-            trigger: true
+          - get: ubuntu-trusty-3363-stemcell
       - task: deploy-director
         file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
         input_mapping:
-          stemcell: ubuntu-trusty-3312-stemcell
+          stemcell: ubuntu-trusty-3363-stemcell
           bosh-release: bosh-release-260
         params:
           BOSH_access_key_id: {{bosh_init_access_key}}
@@ -285,29 +160,27 @@ jobs:
         - task: export-release
           file: bosh-src/ci/pipelines/compiled-releases/tasks/export-release.yml
           input_mapping:
-            stemcell: ubuntu-trusty-3312-stemcell
+            stemcell: ubuntu-trusty-3363-stemcell
             release: bosh-release-260
-        - put: bosh-on-ubuntu-trusty-3312
+        - put: bosh-on-ubuntu-trusty-3363
           params:
             file: "compiled-release/*.tgz"
         ensure:
           task: teardown-director
           file: bosh-src/ci/pipelines/compiled-releases/tasks/teardown-director.yml
 
-  - name: compile-uaa-release-latest-ubuntu-trusty-3312
+  - name: compile-uaa-release-20-ubuntu-trusty-3363
     plan:
       - aggregate:
           - get: bosh-src
           - get: bosh-deployment
           - get: uaa-release-20
-            trigger: true
           - get: bosh-release-260
-          - get: ubuntu-trusty-3312-stemcell
-            trigger: true
+          - get: ubuntu-trusty-3363-stemcell
       - task: deploy-director
         file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
         input_mapping:
-          stemcell: ubuntu-trusty-3312-stemcell
+          stemcell: ubuntu-trusty-3363-stemcell
           bosh-release: bosh-release-260
         params:
           BOSH_access_key_id: {{bosh_init_access_key}}
@@ -319,30 +192,26 @@ jobs:
         - task: export-release
           file: bosh-src/ci/pipelines/compiled-releases/tasks/export-release.yml
           input_mapping:
-            stemcell: ubuntu-trusty-3312-stemcell
+            stemcell: ubuntu-trusty-3363-stemcell
             release: uaa-release-20
-        - put: uaa-on-ubuntu-trusty-3312
+        - put: uaa-on-ubuntu-trusty-3363
           params:
             file: "compiled-release/*.tgz"
         ensure:
           task: teardown-director
           file: bosh-src/ci/pipelines/compiled-releases/tasks/teardown-director.yml
 
-  # ubuntu-trusty-3263
-
-  - name: compile-bosh-release-latest-ubuntu-trusty-3263
+  - name: compile-bosh-release-257-ubuntu-trusty-3363
     plan:
       - aggregate:
           - get: bosh-src
           - get: bosh-deployment
           - get: bosh-release-257
-            trigger: true
-          - get: ubuntu-trusty-3263-stemcell
-            trigger: true
+          - get: ubuntu-trusty-3363-stemcell
       - task: deploy-director
         file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
         input_mapping:
-          stemcell: ubuntu-trusty-3263-stemcell
+          stemcell: ubuntu-trusty-3363-stemcell
           bosh-release: bosh-release-257
         params:
           BOSH_access_key_id: {{bosh_init_access_key}}
@@ -354,101 +223,28 @@ jobs:
         - task: export-release
           file: bosh-src/ci/pipelines/compiled-releases/tasks/export-release.yml
           input_mapping:
-            stemcell: ubuntu-trusty-3263-stemcell
+            stemcell: ubuntu-trusty-3363-stemcell
             release: bosh-release-257
-        - put: bosh-on-ubuntu-trusty-3263
+        - put: bosh-on-ubuntu-trusty-3363
           params:
             file: "compiled-release/*.tgz"
         ensure:
           task: teardown-director
           file: bosh-src/ci/pipelines/compiled-releases/tasks/teardown-director.yml
 
-  - name: compile-uaa-release-latest-ubuntu-trusty-3263
+  - name: compile-uaa-release-13-ubuntu-trusty-3363
     plan:
       - aggregate:
           - get: bosh-src
           - get: bosh-deployment
-          - get: uaa-release
-            trigger: true
-          - get: bosh-release-257
-          - get: ubuntu-trusty-3263-stemcell
-            trigger: true
+          - get: uaa-release-13
+          - get: bosh-release-261
+          - get: ubuntu-trusty-3363-stemcell
       - task: deploy-director
         file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
         input_mapping:
-          stemcell: ubuntu-trusty-3263-stemcell
-          bosh-release: bosh-release-257
-        params:
-          BOSH_access_key_id: {{bosh_init_access_key}}
-          BOSH_secret_access_key: {{bosh_init_secret_key}}
-          BOSH_private_key: {{bosh_ssh_tunnel_key}}
-          BOSH_TARGET_IP: 10.0.2.12
-          BOSH_RESERVED_RANGES: [10.0.2.0-10.0.2.69, 10.0.2.80-10.0.2.255]
-      - do:
-        - task: export-release
-          file: bosh-src/ci/pipelines/compiled-releases/tasks/export-release.yml
-          input_mapping:
-            stemcell: ubuntu-trusty-3263-stemcell
-            release: uaa-release
-        - put: uaa-on-ubuntu-trusty-3263
-          params:
-            file: "compiled-release/*.tgz"
-        ensure:
-          task: teardown-director
-          file: bosh-src/ci/pipelines/compiled-releases/tasks/teardown-director.yml
-
-  # ------
-
-  - name: compile-bosh-release-255-ubuntu-trusty-3263
-    plan:
-      - aggregate:
-          - get: bosh-src
-          - get: bosh-deployment
-          - get: bosh-release-255
-            trigger: true
-          - get: ubuntu-trusty-3263-stemcell
-            trigger: true
-      - task: deploy-director
-        file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
-        input_mapping:
-          stemcell: ubuntu-trusty-3263-stemcell
-          bosh-release: bosh-release-255
-        params:
-          BOSH_access_key_id: {{bosh_init_access_key}}
-          BOSH_secret_access_key: {{bosh_init_secret_key}}
-          BOSH_private_key: {{bosh_ssh_tunnel_key}}
-          BOSH_TARGET_IP: 10.0.2.13
-          BOSH_RESERVED_RANGES: [10.0.2.0-10.0.2.79, 10.0.2.90-10.0.2.255]
-      - do:
-        - task: export-release
-          file: bosh-src/ci/pipelines/compiled-releases/tasks/export-release.yml
-          input_mapping:
-            stemcell: ubuntu-trusty-3263-stemcell
-            release: bosh-release-255
-        - put: bosh-on-ubuntu-trusty-3263
-          params:
-            file: "compiled-release/*.tgz"
-        ensure:
-          task: teardown-director
-          file: bosh-src/ci/pipelines/compiled-releases/tasks/teardown-director.yml
-
-  - name: compile-uaa-release-13.x-ubuntu-trusty-3263
-    plan:
-      - aggregate:
-          - get: bosh-src
-          - get: bosh-deployment
-          - get: uaa-release
-            trigger: true
-          - get: bosh-release-255
-            version:
-              version: "255.12"
-          - get: ubuntu-trusty-3263-stemcell
-            trigger: true
-      - task: deploy-director
-        file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
-        input_mapping:
-          stemcell: ubuntu-trusty-3263-stemcell
-          bosh-release: bosh-release-255
+          stemcell: ubuntu-trusty-3363-stemcell
+          bosh-release: bosh-release-261
         params:
           BOSH_access_key_id: {{bosh_init_access_key}}
           BOSH_secret_access_key: {{bosh_init_secret_key}}
@@ -459,113 +255,9 @@ jobs:
         - task: export-release
           file: bosh-src/ci/pipelines/compiled-releases/tasks/export-release.yml
           input_mapping:
-            stemcell: ubuntu-trusty-3263-stemcell
-            release: uaa-release
-        - put: uaa-on-ubuntu-trusty-3263
-          params:
-            file: "compiled-release/*.tgz"
-        ensure:
-          task: teardown-director
-          file: bosh-src/ci/pipelines/compiled-releases/tasks/teardown-director.yml
-
-  # ------
-
-  - name: compile-bosh-warden-cpi-release-latest-ubuntu-trusty-3312
-    plan:
-      - aggregate:
-          - get: bosh-src
-          - get: bosh-deployment
-          - get: bosh-warden-cpi-release
-            trigger: true
-          - get: bosh-release-260
-          - get: ubuntu-trusty-3312-stemcell
-            trigger: true
-      - task: deploy-director
-        file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
-        input_mapping:
-          stemcell: ubuntu-trusty-3312-stemcell
-          bosh-release: bosh-release-260
-        params:
-          BOSH_access_key_id: {{bosh_init_access_key}}
-          BOSH_secret_access_key: {{bosh_init_secret_key}}
-          BOSH_private_key: {{bosh_ssh_tunnel_key}}
-          BOSH_TARGET_IP: 10.0.2.17
-          BOSH_RESERVED_RANGES: [10.0.2.0-10.0.2.121, 10.0.2.130-10.0.2.255]
-      - do:
-        - task: export-release
-          file: bosh-src/ci/pipelines/compiled-releases/tasks/export-release.yml
-          input_mapping:
-            stemcell: ubuntu-trusty-3312-stemcell
-            release: bosh-warden-cpi-release
-        - put: bosh-warden-cpi-release-ubuntu-trusty-3312
-          params:
-            file: "compiled-release/*.tgz"
-        ensure:
-          task: teardown-director
-          file: bosh-src/ci/pipelines/compiled-releases/tasks/teardown-director.yml
-
-  - name: compile-garden-linux-release-latest-ubuntu-trusty-3312
-    plan:
-      - aggregate:
-          - get: bosh-src
-          - get: bosh-deployment
-          - get: garden-linux-release
-            trigger: true
-          - get: bosh-release-260
-          - get: ubuntu-trusty-3312-stemcell
-            trigger: true
-      - task: deploy-director
-        file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
-        input_mapping:
-          stemcell: ubuntu-trusty-3312-stemcell
-          bosh-release: bosh-release-260
-        params:
-          BOSH_access_key_id: {{bosh_init_access_key}}
-          BOSH_secret_access_key: {{bosh_init_secret_key}}
-          BOSH_private_key: {{bosh_ssh_tunnel_key}}
-          BOSH_TARGET_IP: 10.0.2.18
-          BOSH_RESERVED_RANGES: [10.0.2.0-10.0.2.131, 10.0.2.140-10.0.2.255]
-      - do:
-        - task: export-release
-          file: bosh-src/ci/pipelines/compiled-releases/tasks/export-release.yml
-          input_mapping:
-            stemcell: ubuntu-trusty-3312-stemcell
-            release: garden-linux-release
-        - put: garden-linux-release-ubuntu-trusty-3312
-          params:
-            file: "compiled-release/*.tgz"
-        ensure:
-          task: teardown-director
-          file: bosh-src/ci/pipelines/compiled-releases/tasks/teardown-director.yml
-
-  - name: compile-garden-runc-release-latest-ubuntu-trusty-3312
-    plan:
-      - aggregate:
-          - get: bosh-src
-          - get: bosh-deployment
-          - get: garden-runc-release
-            trigger: true
-          - get: bosh-release-260
-          - get: ubuntu-trusty-3312-stemcell
-            trigger: true
-      - task: deploy-director
-        file: bosh-src/ci/pipelines/compiled-releases/tasks/deploy-director.yml
-        input_mapping:
-          stemcell: ubuntu-trusty-3312-stemcell
-          bosh-release: bosh-release-260
-        params:
-          BOSH_access_key_id: {{bosh_init_access_key}}
-          BOSH_secret_access_key: {{bosh_init_secret_key}}
-          BOSH_private_key: {{bosh_ssh_tunnel_key}}
-          BOSH_TARGET_IP: 10.0.2.19
-          BOSH_RESERVED_RANGES: [10.0.2.0-10.0.2.141, 10.0.2.150-10.0.2.255]
-      - do:
-        - task: export-release
-          file: bosh-src/ci/pipelines/compiled-releases/tasks/export-release.yml
-          input_mapping:
-            stemcell: ubuntu-trusty-3312-stemcell
-            release: garden-runc-release
-        - put: garden-runc-release-ubuntu-trusty-3312
+            stemcell: ubuntu-trusty-3363-stemcell
+            release: uaa-release-13
+        - put: uaa-on-ubuntu-trusty-3363
           params:
             file: "compiled-release/*.tgz"
         ensure:
