Send NATS certificate and url through ENV to CPI
- Removed unused variables in gonats control script.
- Updated and added tests for sending the Mbus information via ENV.
- cpi_spec is updated but it has issues with newlines in the certificate.

[#139736687](https://www.pivotaltracker.com/story/show/139736687)

Signed-off-by: Sameer Vohra <svohra@pivotal.io>

--- a/src/bosh-director/spec/assets/test-director-config.yml
+++ b/src/bosh-director/spec/assets/test-director-config.yml
@@ -52,5 +52,10 @@ config_server:
   enabled: false
 record_events: true
 version: '0.0.2'
-mbus : 'nats://some-user:some-pass@some-nats-uri:1234'
+mbus: 'nats://some-user:some-pass@some-nats-uri:1234'
+nats_ca: |
+  begin nats ca
+  nats ca contents
+  end nats ca
 nats_server_ca_path: 'some-nats-server-ca-path'
+
