Final release 260.7 (created from 260.x)

--- a/.final_builds/packages/health_monitor/index.yml
+++ b/.final_builds/packages/health_monitor/index.yml
@@ -279,6 +279,10 @@ builds:
     version: 4747de56ce0bb138cb1eefcaf2890c691deda51b
     blobstore_id: 893a31de-d3b3-4871-9363-35a43e8ead43
     sha1: a9c6700267db71359c5032b43bcb7178eea7f2cd
+  47f4806ae6585923f244d85f6cd18eaa6146a701:
+    version: 47f4806ae6585923f244d85f6cd18eaa6146a701
+    blobstore_id: 0f80a4ef-009c-447c-556d-cf3bf40dda86
+    sha1: b9e5adde0035d1e158ac25aafc2592215a52d0bb
   48ef20eb6fc4ac8f46097644434e311388866ddf:
     version: 48ef20eb6fc4ac8f46097644434e311388866ddf
     blobstore_id: d6f4ed6e-6986-4ba7-b3d3-b10c9d692825
