--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -119,6 +119,10 @@ builds:
     version: 1e9e2a3a7f9cd14204e92b8e350e63b91cbebbcf
     blobstore_id: ea4c5813-36dd-4471-8b5c-949fa3b4fedf
     sha1: 98e2ed64660dfc9978456cfae9a1272fcab353e9
+  1f3bbdd3a2995a6894c2490057e74329e118d4eb:
+    version: 1f3bbdd3a2995a6894c2490057e74329e118d4eb
+    blobstore_id: eef4138a-0293-4554-60b4-4c9719817f47
+    sha1: 7c0396ef38df73827c073f27acdca7da759ed1cd
   2017dc20d91ca5e4f19af43f3e2db2891bc8db34:
     version: 2017dc20d91ca5e4f19af43f3e2db2891bc8db34
     blobstore_id: 974c4ed1-7a8c-43e6-8917-aae2a17abd98
