--- a/releases/index.yml
+++ b/releases/index.yml
@@ -425,6 +425,8 @@ builds:
     version: "261.2"
   b7a3954a-44ec-4267-9846-a85c2d6cee85:
     version: "191"
+  b8618e87-f2f8-488d-6230-470ae5f1cc59:
+    version: "260.7"
   b962c80a-c270-48b6-87c3-fcda9ca34919:
     version: "205"
   b9804136-798f-44b7-9b66-434423390161:
