Update bbr tests to include additional deployment
- The additional deployment contains persistent disks
- Adjust timeouts

[#145314755](https://www.pivotaltracker.com/story/show/145314755)

Signed-off-by: Tom Viehman <tviehman@pivotal.io>

--- a/ci/docker/main-bosh-docker/inner-bosh-ops.yml
+++ b/ci/docker/main-bosh-docker/inner-bosh-ops.yml
@@ -48,6 +48,9 @@
   path: /instance_groups/name=bosh/persistent_disk_type?
   value: default
 
+- type: remove
+  path: /instance_groups/name=bosh/jobs/name=health_monitor
+
 - type: replace
   path: /update?
   value:
