Run brats on dedicated worker
Signed-off-by: Tyler Schultz <tschultz@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -682,6 +682,7 @@ jobs:
             - candidate-release
       - task: test-brats
         file: bosh-src/ci/tasks/test-brats.yml
+        tags: ["worker-brats"]
         privileged: true
         input_mapping:
           bosh-dev-release: bosh-release
