Fix davcli typo and update pipeline group
[#144043783](https://www.pivotaltracker.com/story/show/144043783)

Signed-off-by: Difan Zhao <dzhao@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -21,6 +21,7 @@ groups:
       - bats-ubuntu
       - brats-ubuntu
       - upgrade-tests
+      - blobstore-performance
 
   - name: mysql
     jobs:
