--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -295,6 +295,7 @@ jobs:
       - { get: bosh-src, trigger: true }
       - { get: davcli, trigger: true }
       - task: test
+        privileged: true
         file: bosh-src/ci/tasks/test-blobstore-load.yml
         on_failure:
           <<: *slack-alert
