Require blobstore perf test to pass for candidates
[#144043783](https://www.pivotaltracker.com/story/show/144043783)

Signed-off-by: Difan Zhao <dzhao@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -593,6 +593,7 @@ jobs:
       - legacy-load-tests-postgres
       - legacy-load-tests-mysql
       - upgrade-tests
+      - blobstore-performance
     - get: bosh-cli
     - get: candidate-version
       params:
