--- a/ci/pipelines/docker-images/pipeline.yml
+++ b/ci/pipelines/docker-images/pipeline.yml
@@ -174,6 +174,21 @@ jobs:
         get_params:
           skip_download: true
 
+  - name: build-bosh-load-tests
+    public: true
+    serial: true
+    plan:
+      - aggregate:
+        - get: bosh-src
+          trigger: true
+          passed:
+            - "build-bosh-docker"
+      - put: bosh-load-tests
+        params:
+          build: "bosh-src-with-docker-dependencies/ci/docker/bosh-load-tests"
+        get_params:
+          skip_download: true
+
   - name: build-main-ubuntu-chroot
     public: true
     serial: true
@@ -349,6 +364,14 @@ resources:
     type: docker-image
     source:
       repository: bosh/main-bosh-docker
+      email: {{dockerhub_email}}
+      username: {{dockerhub_username}}
+      password: {{dockerhub_password}}
+
+  - name: bosh-load-tests
+    type: docker-image
+    source:
+      repository: bosh/bosh-load-tests
       email: {{dockerhub_email}}
       username: {{dockerhub_username}}
       password: {{dockerhub_password}}
