--- a/ci/pipelines/docker-images/pipeline.yml
+++ b/ci/pipelines/docker-images/pipeline.yml
@@ -174,6 +174,27 @@ jobs:
         get_params:
           skip_download: true
 
+  - name: build-bosh-garden
+    public: true
+    serial: true
+    plan:
+      - aggregate:
+        - get: bosh-src
+          trigger: true
+          passed:
+            - "build-main-ruby-go"
+        - get: bosh-cli
+          trigger: true
+        - get: bosh-deployment
+          trigger: true
+      - task: copy-dependencies
+        file: bosh-src/ci/pipelines/docker-images/tasks/copy-bosh-docker-dependencies.yml
+      - put: main-bosh-garden
+        params:
+          build: "bosh-src-with-docker-dependencies/ci/docker/main-bosh-garden"
+        get_params:
+          skip_download: true
+
   - name: build-bosh-load-tests
     public: true
     serial: true
@@ -364,6 +385,14 @@ resources:
     type: docker-image
     source:
       repository: bosh/main-bosh-docker
+      email: {{dockerhub_email}}
+      username: {{dockerhub_username}}
+      password: {{dockerhub_password}}
+
+  - name: main-bosh-garden
+    type: docker-image
+    source:
+      repository: bosh/main-bosh-garden
       email: {{dockerhub_email}}
       username: {{dockerhub_username}}
       password: {{dockerhub_password}}
