docker images pipeline triggers on task changes
Signed-off-by: Luan Santos <lsantos@pivotal.io>

--- a/ci/pipelines/docker-images/pipeline.yml
+++ b/ci/pipelines/docker-images/pipeline.yml
@@ -271,6 +271,7 @@ resources:
       branch: master
       paths:
         - "ci/docker"
+        - "ci/pipelines/docker-images/tasks"
 
   - name: bosh-utils-src
     type: git
