Extract start-garden into own script
Also fix bosh-deployment path

[#146710227](https://www.pivotaltracker.com/story/show/146710227)

Signed-off-by: James Young <jayoung@pivotal.io>

--- a/ci/docker/main-bosh-garden/Dockerfile
+++ b/ci/docker/main-bosh-garden/Dockerfile
@@ -36,3 +36,6 @@ COPY bosh-deployment /usr/local/bosh-deployment/
 
 COPY start-bosh.sh /usr/local/bin/start-bosh
 RUN chmod +x /usr/local/bin/start-bosh
+
+COPY start-garden.sh /usr/local/bin/start-garden
+RUN chmod +x /usr/local/bin/start-garden
