--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -16,7 +16,6 @@ groups:
       - legacy-load-tests-mysql
       - fuzz-tests
       - candidate-release
-      - finalize-bosh-release
       - bats-centos
       - bats-ubuntu
       - brats-ubuntu
@@ -33,10 +32,6 @@ groups:
       - unit-2.3-postgres
       - unit-2.3-rds
       - integration-2.3-postgres
-
-  - name: finalize
-    jobs:
-      - finalize-bosh-release
 
 shared:
   - &deploy-director
@@ -583,7 +578,7 @@ jobs:
     - get: bosh-cli
     - get: candidate-version
       params:
-        bump: major
+        bump: minor
     - task: make
       file: bosh-src/ci/tasks/make-candidate.yml
     - put: bosh-candidate-release-tarballs
@@ -687,51 +682,20 @@ jobs:
         input_mapping:
           bosh-dev-release: bosh-release
 
-  - name: finalize-bosh-release
-    serial: true
-    plan:
-      - aggregate:
-        - get: bosh-src-master
-          resource: bosh-src
-          passed:
-            - bats-centos
-            - bats-ubuntu
-        - get: bosh-dev-release
-          resource: bosh-candidate-release-tarballs
-          passed:
-            - bats-centos
-            - bats-ubuntu
-        - get: bosh-cli
-        - get: candidate-version
-          params:
-            bump: major
-      - task: promote-release
-        file: bosh-src-master/ci/tasks/finalize-bosh-release.yml
-        params:
-          BLOBSTORE_ACCESS_KEY_ID: {{bosh_release_access_key_id}}
-          BLOBSTORE_SECRET_ACCESS_KEY: {{bosh_release_secret_access_key}}
-      - put: candidate-version
-        params:
-          file: bumped-candidate-version/number
-      - put: bosh-master
-        params:
-          repository: bosh-src-with-final
-          tag: /tmp/build/put/bosh-src-with-final-tag/tag-name
-          annotate: /tmp/build/put/bosh-src-with-final-tag/annotate-msg
-
 resources:
   - name: bosh-src
     type: git
     source:
       uri: {{bosh_src_url}}
-      branch: master
+      branch: 262.x
       private_key: {{github_deployment_key}}
 
   - name: candidate-version
     type: semver
     source:
       bucket: {{candidate_release_bucket}}
-      key: version
+      key: 262.x/version
+      initial_version: 262.0.0
       access_key_id: {{candidate_release_access_key_id}}
       secret_access_key: {{candidate_release_secret_access_key}}
 
@@ -741,7 +705,7 @@ resources:
       bucket: {{candidate_release_bucket}}
       access_key_id: {{candidate_release_access_key_id}}
       secret_access_key: {{candidate_release_secret_access_key}}
-      versioned_file: "bosh-dev-release.tgz"
+      versioned_file: "262.x/bosh-dev-release.tgz"
 
   - name: bosh-fuzz-tests
     type: git
@@ -754,13 +718,6 @@ resources:
     source:
       uri: https://github.com/cloudfoundry-incubator/bosh-load-tests-workspace
       branch: master
-
-  - name: bosh-master
-    type: git
-    source:
-      uri: {{bosh_src_url}}
-      branch: master
-      private_key: {{github_deployment_key}}
 
   - name: fuzz-interval-trigger
     type: time
