--- a/releases/index.yml
+++ b/releases/index.yml
@@ -75,6 +75,8 @@ builds:
     version: "26"
   27d3af15-dca6-4dd6-9008-83476d87fd4d:
     version: "257.1"
+  2902a03d-1f78-4c15-4ff4-7d11ebcad013:
+    version: "262.1"
   2946c7ac-ee50-437d-a21a-9e969cfb63bd:
     version: "229"
   2cd44cf882745de94eb4b470d9f5659f6d752388:
