--- a/.final_builds/jobs/director/index.yml
+++ b/.final_builds/jobs/director/index.yml
@@ -199,6 +199,10 @@ builds:
     version: "15"
     blobstore_id: a08e3c0d-50c5-434f-84c2-31572e91b0d8
     sha1: fa44de19bc8d9eb2f7c5fd01f21eec6e50f4db9f
+  a50762a632040d2632439721eab07bc50cc3aab9:
+    version: a50762a632040d2632439721eab07bc50cc3aab9
+    blobstore_id: c564c193-92fc-46e0-66f2-4bf4384a6d23
+    sha1: 7a3a197d5d305ddb0f26ae9a1b008aabdee6597e
   a5d38ec2bebcc0c4b80868b41028ce015021d10a:
     version: a5d38ec2bebcc0c4b80868b41028ce015021d10a
     blobstore_id: 4a143e92-95ab-4aaa-8b7f-fcdffc441013
