Pin gocli version to 101 for integration tests
Signed-off-by: Sameer Vohra <svohra@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -647,7 +647,7 @@ resources:
   - name: gocli-release-bucket-linux
     type: s3
     source:
-      regexp: bosh-cli-(.*)-linux-amd64
+      versioned_file: bosh-cli-0.0.101-linux-amd64
       bucket: bosh-cli-artifacts
 
   - name: bosh-cli
